fixed overflow of text in Planos section

--- a/src/Styles/Less/App.less
+++ b/src/Styles/Less/App.less
@@ -124,6 +124,9 @@
         text-align: left;
         margin-left: 10%;
         margin-bottom: 7%;
+        @media @phone {
+          width: 100%;
+        }
       }
       .area-1 {
         .translateY();
@@ -166,7 +169,6 @@
           border-bottom: 1px solid rgba(66, 74, 78, 0.5);
           padding-top: 10%;
           padding-bottom: 5%;
-          white-space: nowrap;
           display: flex;
           flex-direction: column;
           align-items: center;
